k3s/overlays/prd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okard-frontend
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: okard.081246.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: okard-frontend-svc
                port:
                  number: 80
tls:
    - hosts:
        - okard.081246.xyz
      secretName: okard-frontend-tls
